...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textNeck"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/szyja_cm"
...
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textChest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="3"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/klatka_cm"
...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textBiceps"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/biceps_cm"
...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textWeist"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="3"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/talia_cm"
...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textStomach"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="3"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/brzuch_cm"
...
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textHip"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="3"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/biodro_cm"
...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textTigh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="3"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/udo_cm"
...
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textCalv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="2"
                    android:textAlignment="textEnd"
                    android:background="@color/white"
                    android:hint="@string/lydka_cm"
...
                    android:visibility="visible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/zapisz"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
...
