...
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <TextView
                            android:id="@+id/textWeight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            tools:text="98kg" />

...

            <LinearLayout
                android:id="@+id/linThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/button_addWorkout">

                <Button
                    android:id="@+id/button_addWeight"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:text="@string/dodaj_now_wage" />

                <Button
                    android:id="@+id/button_addMeasurment"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:text="@string/dodaj_nowy_pomiar" />

...
                android:id="@+id/button_addWorkout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/dodaj_trening"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button_addInfo"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_addInfo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
...
