...
                    android:visibility="visible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_addExercise"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/dodaj_cwiczenie"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />
...
                android:layout_height="400dp" />

        </androidx.core.widget.NestedScrollView>


        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/zapisz"
            app:layout_constraintBottom_toBottomOf="parent"
...
